# Energy-Minimisers-of-a-knot-in-S-3

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  composite.py  obj_to_vect.py  print_energies.diff  s3_project.py  vect_to_pdcode.py
.claude/: launch.json
Repulsor/: energy_s3.cpp  energy_s3.cpp.orig  energy_s3.cpp.rej
Repulsor/CoulombPotential/: main.cpp
Repulsor/Example/: main.cpp
Repulsor/Example2/: main.cpp
Repulsor/Example_Surface/: main.cpp
Repulsor/Experiment_SpMM/: main.cpp
Repulsor/Repulsor.xcodeproj/: project.pbxproj
Repulsor/Repulsor.xcodeproj/project.xcworkspace/xcuserdata/Henrik.xcuserdatad/: UserInterfaceState.xcuserstate
Repulsor/Repulsor.xcodeproj/xcshareddata/xcschemes/: CoulombPotential.xcscheme  Example.xcscheme  Example2.xcscheme  Example_Surface.xcscheme  Test_Preconditioner.xcscheme  Test_Remesher.xcscheme  Test_Repulsor.xcscheme  Test_SpaceFillingCurve.xcscheme
Repulsor/Test_Preconditioner/: main.cpp
Repulsor/Test_Remesher/: main.cpp
Repulsor/Test_Repulsor/: main.cpp
Repulsor/Test_SpaceFillingCurve/: main.cpp
Repulsor/src/: ClusterTreePairTraversor.hpp  SimplicialMesh.hpp
Repulsor/src/BlockClusterTree/: BlockSplit_Kernel.hpp
Repulsor/src/BoundingVolumes/: AABB.hpp
Repulsor/src/Energies/: EnergyBase.hpp
Repulsor/src/SimplicialMesh/: NestedDissectionOrdering.hpp
Repulsor/submodules/Tensors/: MMA.hpp
Repulsor/submodules/Tensors/DenseBLAS/: main.cpp
Repulsor/submodules/Tensors/Experiment_SpMM/: main.cpp
Repulsor/submodules/Tensors/Tensors.xcodeproj/project.xcworkspace/xcuserdata/Henrik.xcuserdatad/: UserInterfaceState.xcuserstate
Repulsor/submodules/Tensors/src/Sparse/: Permutation.hpp
analysis/: check_isotopy.py  knot_check.py  knot_check_sage.py  knot_invariants.py  live_view.html  live_view.py  plot_energy.py  plot_vect.py  test_conjecture.py  verify_knot.py
knots/: generate.py  generate_composites.py  generate_granny.py
repulsive-curves/: CMakeLists.txt
